--- a/charts/portal/Chart.yaml
+++ b/charts/portal/Chart.yaml
@@ -20,8 +20,8 @@
 apiVersion: v2
 name: portal
 type: application
-version: 1.7.0-alpha
-appVersion: 1.7.0-alpha
+version: 1.7.0-RC1
+appVersion: 1.7.0-RC1
 description: Helm chart for Catena-X Portal
 home: https://github.com/eclipse-tractusx/portal-cd
 sources:
