--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -151,9 +151,11 @@ spec:
         - name: "SERVICES__APPROVESERVICEUSERROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.services.approveServiceUserRoles.role1 }}"
         - name: "SERVICES__BASEPORTALADDRESS"
-          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
-        - name: "SERVICES__ACTIVATIONPORTALADDRESS"
-          value: "{{ .Values.portalAddress }}"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.services.subscriptionPath }}"
+        - name: "SERVICES__OFFERSUBSCRIPTIONADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.services.subscriptionPath }}"
+        - name: "SERVICES__OFFERDETAILADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.services.detailPath }}"
         - name: "SERVICES__USERMANAGEMENTADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
         - name: "SERVICES__CATENAADMINROLES__0__CLIENTID"
