--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -109,9 +109,11 @@ spec:
         - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.appmarketplace.approveAppUserRoles.role1 }}"
         - name: "APPMARKETPLACE__BASEPORTALADDRESS"
-          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
-        - name: "APPMARKETPLACE__ACTIVATIONPORTALADDRESS"
-          value: "{{ .Values.portalAddress }}"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.appmarketplace.subscriptionPath }}"
+        - name: "APPMARKETPLACE__OFFERSUBSCRIPTIONADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.appmarketplace.subscriptionPath }}"
+        - name: "APPMARKETPLACE__OFFERDETAILADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.appmarketplace.detailPath }}"
         - name: "APPMARKETPLACE__USERMANAGEMENTADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
         - name: "APPMARKETPLACE__CATENAADMINROLES__0__CLIENTID"
