chore: adjust help url
Refs: CPLP-3457

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -100,8 +100,8 @@ spec:
               value: "{{ .Values.backend.processesworker.applicationActivation.loginTheme }}"
             - name: "APPLICATIONACTIVATION__HOMEADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
-            - name: "APPLICATIONACTIVATION__HELPADDRESS"
-              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHelpPath }}"
+            - name: "APPLICATIONACTIVATION__PASSWORDRESENDADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
             - name: "APPLICATIONACTIVATION__COMPANYROLESPARTICIPANTADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalIntroductionCompanyRolePath }}"
             - name: "APPLICATIONACTIVATION__DATASPACEADDRESS"
