--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -202,8 +202,8 @@ spec:
           value: "{{ .Values.backend.services.subscriptionManagerRoles.role0 }}"
         - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.services.subscriptionManagerRoles.role1 }}"
-        - name: "SERVICES__SERVICEMARKETPLACEADDRESS"
-          value: "{{ .Values.portalAddress }}{{ .Values.backend.services.serviceMarketplacePath }}"
+        - name: "SERVICES__SERVICEOVERVIEWADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.services.serviceOverviewPath }}"
         - name: "SERVICES__SUBMITSERVICENOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.services.submitServiceNotificationTypeIds.type0 }}"
         - name: "SWAGGERENABLED"
