--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -196,6 +196,7 @@ backend:
     sslMode: "Disable"
   portalHomePath: "/home"
   portalHelpPath: "/documentation"
+  portalPasswordResendPath: "/home/passwordResend" # -- TODO: Currently this is not supported by the front- and backend. We will adjust that later on
   portalIntroductionCompanyRolePath: "/companyroles"
   portalIntroductionDataspacePath: "/dataspace"
   userManagementPath: "/usermanagement"
@@ -622,7 +623,7 @@ backend:
         #   value: "keycloak"
         - name: "HEALTHCHECKS__0__TAGS__1"
           value: "portaldb"
-    serviceMarketplacePath: "/serviceoverview"
+    serviceOverviewPath: "/serviceoverview"
     subscriptionPath: "/servicesubscription"
     detailPath: "/servicedetail"
     catenaAdminRoles:
