--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -57,6 +57,10 @@ jobs:
           version: v0.19.0
           node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.26.6' }}
 
+      - name: Check nodes (information only)
+        run: |
+          kubectl describe nodes
+
       - name: Set up Helm
         uses: azure/setup-helm@v3
         with:
@@ -85,7 +89,6 @@ jobs:
 
       - name: Run helm install
         run: |
-          kubectl describe nodes
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
           helm install portal charts/portal --namespace install --create-namespace --debug
