--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -52,10 +52,14 @@ jobs:
           fetch-depth: 0
 
       - name: Kubernetes KinD Cluster
-        uses: container-tools/kind-action@v2
+        uses: container-tools/kind-action@v2.0.1
         with:
           version: v0.19.0
           node_image: ${{ github.event.inputs.node_image || 'kindest/node:v1.26.6' }}
+
+      - name: Check nodes (information only)
+        run: |
+          kubectl describe nodes
 
       - name: Set up Helm
         uses: azure/setup-helm@v3
@@ -87,7 +91,7 @@ jobs:
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
           helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
-          helm install portal charts/portal --namespace install --create-namespace
+          helm install portal charts/portal --namespace install --create-namespace --debug
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
 
         # Upgrade the released portal chart version with the locally available chart
