feat(mails): adjust parameter for mail templates (#119)
Refs: CPLP-3457
Reviewed-By: Evelyn Gurschler <evelyn.gurschler@bmw.de>

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -81,7 +81,7 @@ spec:
             - name: "APPLICATIONACTIVATION__CLIENTTOREMOVEROLESONACTIVATION__0"
               value: "{{ .Values.backend.processesworker.applicationActivation.clientToRemoveRolesOnActivation.client0 }}"
             - name: "APPLICATIONACTIVATION__BASEPORTALADDRESS"
-              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
+              value: "{{ .Values.portalAddress }}"
             - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__0__CLIENTID"
               value: "{{ .Values.backend.clients.registration }}"
             - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__0__USERROLENAMES__0"
@@ -98,6 +98,14 @@ spec:
               value: "{{ .Values.backend.processesworker.applicationActivation.welcomeNotificationTypeIds.type4 }}"
             - name: "APPLICATIONACTIVATION__LOGINTHEME"
               value: "{{ .Values.backend.processesworker.applicationActivation.loginTheme }}"
+            - name: "APPLICATIONACTIVATION__HOMEADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
+            - name: "APPLICATIONACTIVATION__PASSWORDRESENDADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
+            - name: "APPLICATIONACTIVATION__COMPANYROLESPARTICIPANTADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalIntroductionCompanyRolePath }}"
+            - name: "APPLICATIONACTIVATION__DATASPACEADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalIntroductionDataspacePath }}"
             - name: "APPLICATIONCHECKLIST__BPDM__BASEADDRESS"
               value: "{{ .Values.bpdmPortalGateAddress }}"
             - name: "APPLICATIONCHECKLIST__BPDM__CLIENTID"
@@ -233,6 +241,12 @@ spec:
               value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
             - name: "NETWORKREGISTRATION__BASEPORTALADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
+            - name: "NETWORKREGISTRATION__LOGINDOCUMENTADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.processesworker.networkRegistration.loginDocumentPath }}"
+            - name: "NETWORKREGISTRATION__EXTERNALREGISTRATIONADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.processesworker.networkRegistration.externalRegistrationPath }}"
+            - name: "NETWORKREGISTRATION__CLOSEAPPLICATIONADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.processesworker.networkRegistration.closeApplicationPath }}"
             - name: "MAILINGSERVICE__MAIL__SMTPPORT"
               value: "{{ .Values.backend.mailing.port }}"
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
