--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -230,6 +230,8 @@ spec:
           value: "{{ .Values.backend.administration.invitation.invitedUserInitialRoles.role0 }}"
         - name: "INVITATION__REGISTRATIONAPPADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
+        - name: "INVITATION__PASSWORDRESENDADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
         - name: "INVITATION__INITIALLOGINTHEME"
           value: "{{ .Values.backend.administration.invitation.initialLoginTheme }}"
         - name: "JWTBEAREROPTIONS__METADATAADDRESS"
@@ -334,6 +336,8 @@ spec:
           value: "{{ .Values.backend.provisioning.sharedRealmClient.clientId }}"
         - name: "REGISTRATION__DOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.administration.registration.documentTypeIds.type0 }}"
+        - name: "REGISTRATION__HELPADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHelpPath }}"
         - name: "SERVICEACCOUNT__CLIENTID"
           value: "{{ .Values.backend.administration.serviceAccount.clientId }}"
         - name: "SWAGGERENABLED"
@@ -350,6 +354,8 @@ spec:
           value: "{{ .Values.backend.administration.userManagement.userAdminRoles.role1 }}"
         - name: "USERMANAGEMENT__PORTAL__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
+        - name: "USERMANAGEMENT__PORTAL__PASSWORDRESENDADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
         - name: "USERMANAGEMENT__PORTAL__KEYCLOAKCLIENTID"
           value: "{{ .Values.backend.administration.keycloakClientId }}"
         ports:
