--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -164,6 +164,8 @@ spec:
           value: "{{ .Values.backend.registration.applicationStatusIds.status2 }}"
         - name: "REGISTRATION__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
+        - name: "REGISTRATION__PASSWORDRESENDADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
         - name: "REGISTRATION__DOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.registration.documentTypeIds.type0 }}"
         - name: "REGISTRATION__DOCUMENTTYPEIDS__1"
