chore: update registration app image

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -106,7 +106,7 @@ frontend:
     name: "registration"
     image:
       name: "tractusx/portal-frontend-registration"
-      registrationtag: v1.5.1
+      registrationtag: 5335db3deea52e3590b6c3cd99fc9b67f6072e91
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
